<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:title="@string/menu_drawer_home"
        android:icon="@mipmap/ic_menu_home" />

    <item
        android:id="@+id/nav_account"
        android:title="@string/minha_conta"
        android:icon="@drawable/ic_account" />

    <item
        android:id="@+id/nav_category"
        android:title="@string/menu_drawer_categorias"
        android:icon="@drawable/ic_category" />

    <item
        android:id="@+id/orders"
        android:title="@string/menu_drawer_minhas_compras"
        android:icon="@drawable/ic_compras" />

    <item
        android:id="@+id/cart"
        android:title="@string/menu_drawer_meu_carrinho"
        android:icon="@drawable/ic_orders" />

    <item
        android:id="@+id/nav_logout"
        android:title="@string/menu_drawer_sair"
        android:icon="@drawable/ic_menu_logout" />


</menu>